Bug 308976 - Video stream should be flipped
Summary: Video stream should be flipped
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: call-ui (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-25 11:20 UTC by Rohan Garg
Modified: 2012-10-25 19:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rohan Garg 2012-10-25 11:20:57 UTC
Most VoIP clients horizontally flip the video stream so that the video stream shows the correct orientation of the user.

Reproducible: Always

Steps to Reproduce:
1. Start a video call
2. Raise right hand
3. Video window shows left hand being raised



In order to implement this we need to introduce the videoflip gstreamer element and set 'method' to GST_VIDEO_FLIP_METHOD_HORIZ
Comment 1 Martin Klapetek 2012-10-25 11:44:12 UTC
Additional info: G+ Hangout flips the image locally, but sends the original image.

I'm curious about skype. Can anyone try that?
Comment 2 Rohan Garg 2012-10-25 11:45:37 UTC
Clearly G+ is drunk.
From what I remember Skype does flip the video.
Comment 3 Martin Klapetek 2012-10-25 11:49:12 UTC
I think it's actually quite clever, because the other side will then see you mirrored - think of mirrored texts, having eypatch on left eye instead of right eye etc. So it's clever in that it shows you mirrored image locally, but the other side see you as they would see you in real life (ie. not mirrored).
Comment 4 Rohan Garg 2012-10-25 13:23:24 UTC
Git commit e88268a6a6fd833a49f80adc1dad72444ec5252b by Rohan Garg.
Committed on 25/10/2012 at 15:20.
Pushed by garg into branch 'kde-telepathy-0.5'.

Flip the local video overlay
REVIEWED BY: George Kiagiadakis

M  +7    -3    libktpcall/private/video-sink-bin.cpp

http://commits.kde.org/telepathy-call-ui/e88268a6a6fd833a49f80adc1dad72444ec5252b