Flip the local video overlay

BUG: 308976
REVIEWED BY: George Kiagiadakis